--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="input_password_again">Input password again</string>
     <string name="register">Register</string>
     <string name="click_this_to_login">Click this to login page</string>
+    <string name="type_a_message">Type a message</string>
+    <string name="select_user">Select User</string>
 
 </resources>
