Button & UI update
add some buttons for new functions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="confirm_Button">Confirm</string>
     <string name="return_button">Return</string>
     <string name="new_password">New password</string>
+    <string name="side_menu">EXTRA</string>
 
 </resources>
