--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="new_password">New password</string>
     <string name="side_menu">EXTRA</string>
     <string name="online">Online</string>
+    <string name="user_profile">User Profile</string>
+    <string name="back">Back</string>
 
 </resources>
