Sensor Update & UI adjust
add two sensors: humidity and temperature. Adjust the position of  side floating buttons. Add new click functions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="online">Online</string>
     <string name="user_profile">User Profile</string>
     <string name="back">Back</string>
+    <string name="temperature">%1$.2f℃</string>
+    <string name="humidity">%1$.1fRH</string>
 
 </resources>
